--- a/Client.dproj
+++ b/Client.dproj
@@ -101,6 +101,7 @@
         <DCCReference Include="ufMain.pas">
             <Form>fMain</Form>
         </DCCReference>
+        <DCCReference Include="WSClient.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
